# Agent-to-Agent

./: model.py  pyproject.toml
elon_agent/: agent.py  tools.py
elon_agent/.adk/: session.db
jeff_agent/: agent.py  agent_executor.py  tools.py
mark_agent/: agent.py  tools.py
